Fix clipping result background color in listen test

--- a/src/app/components/listen/sentence-test.component.css
+++ b/src/app/components/listen/sentence-test.component.css
@@ -29,12 +29,15 @@
 }
 .correct {
   background-color: green;
+  z-index: 5;
 }
 .almostcorrect {
   background-color: orange;
+  z-index: 5;
 }
 .incorrect {
   background-color: red;
+  z-index: 5;
 }
 .solution {
   font-size: 3rem;
